--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,3 +3,4 @@ geotrellis.host = "0.0.0.0"
 geotrellis.port = 8888
 geotrellis.rest-package = "gtexample"
 geotrellis.tmp = "/tmp"
+geotrellis.servicedir = "src/main/resources/services"
